--- a/cannon/CMakeLists.txt
+++ b/cannon/CMakeLists.txt
@@ -5,8 +5,6 @@ list(APPEND CANNON_SOURCES
 add_subdirectory(math)
 add_subdirectory(log)
 add_subdirectory(logic)
-add_subdirectory(graphics)
-add_subdirectory(plot)
 add_subdirectory(ml)
 add_subdirectory(control)
 add_subdirectory(physics)
@@ -14,19 +12,36 @@ add_subdirectory(geom)
 add_subdirectory(research)
 add_subdirectory(utils)
 
-add_library(cannon SHARED ${CANNON_SOURCES}
-  $<TARGET_OBJECTS:math>
-  $<TARGET_OBJECTS:log>
-  $<TARGET_OBJECTS:logic>
-  $<TARGET_OBJECTS:graphics>
-  $<TARGET_OBJECTS:plot>
-  $<TARGET_OBJECTS:ml>
-  $<TARGET_OBJECTS:control>
-  $<TARGET_OBJECTS:physics>
-  $<TARGET_OBJECTS:geom>
-  $<TARGET_OBJECTS:research>
-  $<TARGET_OBJECTS:utils>
-  )
+if (CANNON_BUILD_GRAPHICS)
+  add_subdirectory(graphics)
+  add_subdirectory(plot)
+  add_library(cannon SHARED ${CANNON_SOURCES}
+    $<TARGET_OBJECTS:math>
+    $<TARGET_OBJECTS:log>
+    $<TARGET_OBJECTS:logic>
+    $<TARGET_OBJECTS:graphics>
+    $<TARGET_OBJECTS:plot>
+    $<TARGET_OBJECTS:ml>
+    $<TARGET_OBJECTS:control>
+    $<TARGET_OBJECTS:physics>
+    $<TARGET_OBJECTS:geom>
+    $<TARGET_OBJECTS:research>
+    $<TARGET_OBJECTS:utils>
+    )
+else()
+  add_library(cannon SHARED ${CANNON_SOURCES}
+    $<TARGET_OBJECTS:math>
+    $<TARGET_OBJECTS:log>
+    $<TARGET_OBJECTS:logic>
+    $<TARGET_OBJECTS:ml>
+    $<TARGET_OBJECTS:control>
+    $<TARGET_OBJECTS:physics>
+    $<TARGET_OBJECTS:geom>
+    $<TARGET_OBJECTS:research>
+    $<TARGET_OBJECTS:utils>
+    )
+endif()
+
 target_link_libraries(cannon ${LIBRARIES})
 
 # Copy CNF formulas
@@ -37,22 +52,6 @@ ADD_CUSTOM_COMMAND(
   COMMENT "Copying formulas" VERBATIM
   )
 
-# Copy shaders
-ADD_CUSTOM_COMMAND(
-  TARGET cannon POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E create_symlink
-    ${CMAKE_CURRENT_SOURCE_DIR}/graphics/shaders ${CMAKE_CURRENT_BINARY_DIR}/../shaders
-  COMMENT "Copying shaders" VERBATIM
-  )
-
-# Copy assets
-ADD_CUSTOM_COMMAND(
-  TARGET cannon POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E create_symlink
-    ${CMAKE_CURRENT_SOURCE_DIR}/graphics/assets ${CMAKE_CURRENT_BINARY_DIR}/../assets
-  COMMENT "Copying assets" VERBATIM
-  )
-
 # Copy parl configs
 ADD_CUSTOM_COMMAND(
   TARGET cannon POST_BUILD
@@ -60,3 +59,21 @@ ADD_CUSTOM_COMMAND(
     ${CMAKE_CURRENT_SOURCE_DIR}/research/experiments/parl_configs ${CMAKE_CURRENT_BINARY_DIR}/../experiments/parl_configs
   COMMENT "Copying parl_configs" VERBATIM
   )
+
+if (CANNON_BUILD_GRAPHICS)
+  # Copy shaders
+  ADD_CUSTOM_COMMAND(
+    TARGET cannon POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+      ${CMAKE_CURRENT_SOURCE_DIR}/graphics/shaders ${CMAKE_CURRENT_BINARY_DIR}/../shaders
+    COMMENT "Copying shaders" VERBATIM
+    )
+
+  # Copy assets
+  ADD_CUSTOM_COMMAND(
+    TARGET cannon POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+      ${CMAKE_CURRENT_SOURCE_DIR}/graphics/assets ${CMAKE_CURRENT_BINARY_DIR}/../assets
+    COMMENT "Copying assets" VERBATIM
+    )
+endif()
