--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ if(CANNON_BUILD_GRAPHICS)
   add_definitions( -DCANNON_BUILD_GRAPHICS=1 )
 endif()
 
+option(CANNON_BUILD_RESEARCH "Whether to build research portions of the project" ON)
+if(CANNON_BUILD_RESEARCH)
+  add_definitions( -DCANNON_BUILD_RESEARCH=1 )
+endif()
+
 # Compilation configuration
 ADD_DEFINITIONS(
   -Wall
@@ -184,12 +189,14 @@ foreach (script_source ${SCRIPT_SOURCES})
   set_target_properties(${scriptname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/scripts")
 endforeach (script_source ${SCRIPT_SOURCES})
 
-# Find experiments
-file( GLOB_RECURSE EXP_SOURCES cannon/research/experiments/*.cpp )
-foreach (exp_source ${EXP_SOURCES})
-  get_filename_component( expname ${exp_source} NAME_WE)
-  add_executable( ${expname} ${exp_source} )
-  target_link_libraries( ${expname} cannon ${LIBRARIES})
-  target_include_directories( ${expname} PUBLIC "${PROJECT_SOURCE_DIR}")
-  set_target_properties(${expname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/experiments")
-endforeach (exp_source ${EXP_SOURCES})
+if (CANNON_BUILD_RESEARCH)
+  # Find experiments
+  file( GLOB_RECURSE EXP_SOURCES cannon/research/experiments/*.cpp )
+  foreach (exp_source ${EXP_SOURCES})
+    get_filename_component( expname ${exp_source} NAME_WE)
+    add_executable( ${expname} ${exp_source} )
+    target_link_libraries( ${expname} cannon ${LIBRARIES})
+    target_include_directories( ${expname} PUBLIC "${PROJECT_SOURCE_DIR}")
+    set_target_properties(${expname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/experiments")
+  endforeach (exp_source ${EXP_SOURCES})
+endif()
