Implemented Wolfe Conditions line search and BFGS optimizer. Partially addresses #81

--- a/cannon/math/CMakeLists.txt
+++ b/cannon/math/CMakeLists.txt
@@ -2,6 +2,7 @@ list(APPEND MATH_SOURCES
   finite_diff_derivative.cpp
   barycentric_coords.cpp
   multivariate_normal.cpp
+  func/rosenbrock.cpp
   )
 
 add_library(math OBJECT ${MATH_SOURCES})
