Implemented basic Lagrangian and path action tools. Tried using BFGS to minimize path action, but doesn't appear to work well. Should implement pattern search and try again.

--- a/cannon/physics/CMakeLists.txt
+++ b/cannon/physics/CMakeLists.txt
@@ -1,6 +1,7 @@
 list(APPEND PHYSICS_SOURCES
   euler_integrator.cpp
   rk4_integrator.cpp
+  lagrangian_mechanics.cpp
   )
 
 add_library(physics OBJECT ${PHYSICS_SOURCES})
