Implemented pattern search and tried applying it to lagrangian mechanics. Still need to replace linear interpolation path representation with Lagrange interpolation. Partially addresses #81

--- a/cannon/ml/CMakeLists.txt
+++ b/cannon/ml/CMakeLists.txt
@@ -5,6 +5,7 @@ list(APPEND ML_SOURCES
   bfgs.cpp
   wolfe_conditions.cpp
   optimization_result.cpp
+  pattern_search.cpp
   )
 
 add_library(ml OBJECT ${ML_SOURCES})
