--- a/cannon/ml/CMakeLists.txt
+++ b/cannon/ml/CMakeLists.txt
@@ -6,6 +6,7 @@ list(APPEND ML_SOURCES
   wolfe_conditions.cpp
   optimization_result.cpp
   pattern_search.cpp
+  linear_programming.cpp
   )
 
 add_library(ml OBJECT ${ML_SOURCES})
