Added HDF5 library for saving and loading models (necessary for research)

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "cannon/research"]
 	path = cannon/research
 	url = https://github.com/cannontwo/research.git
+[submodule "thirdparty/HighFive"]
+	path = thirdparty/HighFive
+	url = https://github.com/BlueBrain/HighFive.git
