Implemented Raytracing In One Weekend up to Chapter 9. Diffuse rendering now working.

--- a/cannon/math/CMakeLists.txt
+++ b/cannon/math/CMakeLists.txt
@@ -3,6 +3,7 @@ list(APPEND MATH_SOURCES
   barycentric_coords.cpp
   multivariate_normal.cpp
   func/rosenbrock.cpp
+  random_double.cpp
   )
 
 add_library(math OBJECT ${MATH_SOURCES})
