--- a/cannon/ray/CMakeLists.txt
+++ b/cannon/ray/CMakeLists.txt
@@ -1,6 +1,9 @@
 list(APPEND RAY_SOURCES
   write_ppm.cpp
   ray.cpp
+  sphere.cpp
+  hittable_list.cpp
+  camera.cpp
   )
 
 add_library(ray OBJECT ${RAY_SOURCES})
