--- a/cannon/ray/CMakeLists.txt
+++ b/cannon/ray/CMakeLists.txt
@@ -4,6 +4,7 @@ list(APPEND RAY_SOURCES
   sphere.cpp
   hittable_list.cpp
   camera.cpp
+  material.cpp
   )
 
 add_library(ray OBJECT ${RAY_SOURCES})
