--- a/cannon/ray/CMakeLists.txt
+++ b/cannon/ray/CMakeLists.txt
@@ -5,6 +5,7 @@ list(APPEND RAY_SOURCES
   hittable_list.cpp
   camera.cpp
   material.cpp
+  raytracer.cpp
   )
 
 add_library(ray OBJECT ${RAY_SOURCES})
