--- a/cannon/ray/params/test.yaml
+++ b/cannon/ray/params/test.yaml
@@ -1,22 +1,27 @@
-aspect_ratio: 1.6667
-image_width: 1200
-samples_per_pixel: 50
+aspect_ratio: 1.0
+image_width: 600
+samples_per_pixel: 200
 max_depth: 50
 dist_to_focus: 10.0
-aperture: 0.1
-vfov: 0.393
+aperture: 0.0
+vfov: 0.6981
 
 look_from:
-  x: 13
-  y: 2
-  z: 3
+  x: 278
+  y: 278
+  z: -800
 
 look_at:
-  x: 0
-  y: 0
+  x: 278
+  y: 278
   z: 0
 
 vup:
   x: 0
   y: 1
+  z: 0
+
+background_color:
+  x: 0
+  y: 0
   z: 0
