Implemented scattering medium

--- a/cannon/ray/CMakeLists.txt
+++ b/cannon/ray/CMakeLists.txt
@@ -12,6 +12,7 @@ list(APPEND RAY_SOURCES
   texture.cpp
   aa_rect.cpp
   hittable.cpp
+  constant_medium.cpp
   )
 
 add_library(ray OBJECT ${RAY_SOURCES})
