Implemented triangle mesh loading via Assimp (texture loading not yet implemented). Partially addresses #103

--- a/cannon/ray/CMakeLists.txt
+++ b/cannon/ray/CMakeLists.txt
@@ -14,6 +14,7 @@ list(APPEND RAY_SOURCES
   hittable.cpp
   constant_medium.cpp
   film.cpp
+  mesh.cpp
   )
 
 add_library(ray OBJECT ${RAY_SOURCES})
