--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        submodules: recursive
       
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag cannon/cannon:$(date +%s)
