--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
+        token: '${{ secrets.GITHUB_PAT }}'
       
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag cannon/cannon:$(date +%s)
