--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,11 @@ if(CANNON_BUILD_RESEARCH)
   add_definitions( -DCANNON_BUILD_RESEARCH=1 )
 endif()
 
+option(CANNON_BUILD_LIBRARY "Whether to build anything at all" ON)
+
+# Building Documentation
+option(CANNON_BUILD_DOC "Build documentation" OFF)
+
 # Compilation configuration
 ADD_DEFINITIONS(
   -Wall
@@ -29,16 +34,18 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # Produce code coverage target
-if(CMAKE_COMPILER_IS_GNUCXX)
-  include(CodeCoverage)
-  append_coverage_compiler_flags()
-  setup_target_for_coverage_gcovr_html(NAME ${PROJECT_NAME}_coverage ${PROJECT_TEST_NAME} coverage 
-    EXCLUDE ${PROJECT_SOURCE_DIR}/tests 
-    EXCLUDE ${PROJECT_SOURCE_DIR}/cannon/graphics 
-    EXCLUDE ${PROJECT_SOURCE_DIR}/cannon/plot 
-    EXCLUDE ${PROJECT_SOURCE_DIR}/cannon/physics/systems
-    EXCLUDE ${PROJECT_SOURCE_DIR}/scripts
-    EXCLUDE ${PROJECT_SOURCE_DIR}/thirdparty)
+if (CANNON_BUILD_LIBRARY)
+  if(CMAKE_COMPILER_IS_GNUCXX)
+    include(CodeCoverage)
+    append_coverage_compiler_flags()
+    setup_target_for_coverage_gcovr_html(NAME ${PROJECT_NAME}_coverage ${PROJECT_TEST_NAME} coverage 
+      EXCLUDE ${PROJECT_SOURCE_DIR}/tests 
+      EXCLUDE ${PROJECT_SOURCE_DIR}/cannon/graphics 
+      EXCLUDE ${PROJECT_SOURCE_DIR}/cannon/plot 
+      EXCLUDE ${PROJECT_SOURCE_DIR}/cannon/physics/systems
+      EXCLUDE ${PROJECT_SOURCE_DIR}/scripts
+      EXCLUDE ${PROJECT_SOURCE_DIR}/thirdparty)
+  endif()
 endif()
 
 IF( EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json" )
@@ -57,8 +64,6 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
 SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
 
-# Building Documentation
-option(CANNON_BUILD_DOC "Build documentation" OFF)
 
 # check if Doxygen is installed
 if (CANNON_BUILD_DOC)
@@ -98,175 +103,177 @@ if (CANNON_BUILD_DOC)
 endif (CANNON_BUILD_DOC)
 
 
-# Clang Tidy
-find_program (CLANG_TIDY_EXE NAMES "clang-tidy")
-if(CLANG_TIDY_EXE)
-    set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE};-format-style=file;-header-filter='${CMAKE_SOURCE_DIR}/*'" CACHE STRING "" FORCE)
-else()
-    message(STATUS "clang-tidy NOT found!")
-    set(CMAKE_CXX_CLANG_TIDY "" CACHE STRING "" FORCE) # clear it
-endif()
+if (CANNON_BUILD_LIBRARY)
+  # Clang Tidy
+  find_program (CLANG_TIDY_EXE NAMES "clang-tidy")
+  if(CLANG_TIDY_EXE)
+      set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXE};-format-style=file;-header-filter='${CMAKE_SOURCE_DIR}/*'" CACHE STRING "" FORCE)
+  else()
+      message(STATUS "clang-tidy NOT found!")
+      set(CMAKE_CXX_CLANG_TIDY "" CACHE STRING "" FORCE) # clear it
+  endif()
 
-# Threading
-set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
-set(THREADS_PREFER_PTHREAD_FLAG TRUE)
-find_package(Threads REQUIRED)
-list(APPEND LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
+  # Threading
+  set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+  set(THREADS_PREFER_PTHREAD_FLAG TRUE)
+  find_package(Threads REQUIRED)
+  list(APPEND LIBRARIES ${CMAKE_THREAD_LIBS_INIT})
 
-# OMPL
-find_package(OMPL REQUIRED)
-include_directories(${OMPL_INCLUDE_DIRS})
-link_directories(${OMPL_LIBRARY_DIRS})
-add_definitions(${OMPL_DEFINITIONS})
-list(APPEND LIBRARIES ${OMPL_LIBRARIES})
+  # OMPL
+  find_package(OMPL REQUIRED)
+  include_directories(${OMPL_INCLUDE_DIRS})
+  link_directories(${OMPL_LIBRARY_DIRS})
+  add_definitions(${OMPL_DEFINITIONS})
+  list(APPEND LIBRARIES ${OMPL_LIBRARIES})
 
-# Eigen
-find_package(Eigen3 3.3.4 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
+  # Eigen
+  find_package(Eigen3 3.3.4 REQUIRED)
+  include_directories(${EIGEN3_INCLUDE_DIR})
 
-# CGAL
-find_package(CGAL REQUIRED COMPONENTS Core)
-include_directories(${CGAL_INCLUDE_DIRS})
-#list(APPEND LIBRARIES ${CGAL_LIBRARY})
-list(APPEND LIBRARIES CGAL::CGAL CGAL::CGAL_Core)
+  # CGAL
+  find_package(CGAL REQUIRED COMPONENTS Core)
+  include_directories(${CGAL_INCLUDE_DIRS})
+  #list(APPEND LIBRARIES ${CGAL_LIBRARY})
+  list(APPEND LIBRARIES CGAL::CGAL CGAL::CGAL_Core)
 
-# Boost
-find_package(Boost 1.74.0 REQUIRED)
-include_directories(${Boost_INCLUDE_DIRS})
+  # Boost
+  find_package(Boost 1.74.0 REQUIRED)
+  include_directories(${Boost_INCLUDE_DIRS})
 
-# yaml-cpp
-find_package(yaml-cpp 0.6.0 REQUIRED)
-include_directories(${YAML_CPP_INCLUDE_DIR})
-list(APPEND LIBRARIES ${YAML_CPP_LIBRARIES})
+  # yaml-cpp
+  find_package(yaml-cpp 0.6.0 REQUIRED)
+  include_directories(${YAML_CPP_INCLUDE_DIR})
+  list(APPEND LIBRARIES ${YAML_CPP_LIBRARIES})
 
-# Catch2
-find_package(Catch2 REQUIRED)
-include(Catch)
+  # Catch2
+  find_package(Catch2 REQUIRED)
+  include(Catch)
 
-# Gurobi
-find_package(GUROBI)
-if (GUROBI_FOUND)
-  add_definitions( -DCANNON_HAVE_GUROBI=1 )
-  include_directories(${GUROBI_INCLUDE_DIRS})
-  message("GUROBI")
-  message(${GUROBI_LIBRARY})
-  message(${GUROBI_CXX_LIBRARY})
-  # A hack, for some reason findGUROBI isn't working
-  list(APPEND LIBRARIES ${GUROBI_LIBRARY} ${GUROBI_CXX_LIBRARY})
-endif()
+  # Gurobi
+  find_package(GUROBI)
+  if (GUROBI_FOUND)
+    add_definitions( -DCANNON_HAVE_GUROBI=1 )
+    include_directories(${GUROBI_INCLUDE_DIRS})
+    message("GUROBI")
+    message(${GUROBI_LIBRARY})
+    message(${GUROBI_CXX_LIBRARY})
+    # A hack, for some reason findGUROBI isn't working
+    list(APPEND LIBRARIES ${GUROBI_LIBRARY} ${GUROBI_CXX_LIBRARY})
+  endif()
 
-# HDF5
-find_package(HDF5 REQUIRED)
-include_directories(${HDF5_INCLUDE_DIRS})
-list(APPEND LIBRARIES ${HDF5_LIBRARIES})
+  # HDF5
+  find_package(HDF5 REQUIRED)
+  include_directories(${HDF5_INCLUDE_DIRS})
+  list(APPEND LIBRARIES ${HDF5_LIBRARIES})
 
-# HighFive
-add_subdirectory("thirdparty/HighFive")
-add_definitions( -DHIGHFIVE_USE_EIGEN=1 )
-list(APPEND LIBRARIES HighFive)
+  # HighFive
+  add_subdirectory("thirdparty/HighFive")
+  add_definitions( -DHIGHFIVE_USE_EIGEN=1 )
+  list(APPEND LIBRARIES HighFive)
 
-# TinyColorMap
-include_directories("thirdparty/tinycolormap/include")
+  # TinyColorMap
+  include_directories("thirdparty/tinycolormap/include")
 
-# STB_IMAGE
-add_library(STB_IMAGE "thirdparty/stb_image/stb_image.cpp")
-include_directories("thirdparty/stb_image/include")
-list(APPEND LIBRARIES STB_IMAGE)
+  # STB_IMAGE
+  add_library(STB_IMAGE "thirdparty/stb_image/stb_image.cpp")
+  include_directories("thirdparty/stb_image/include")
+  list(APPEND LIBRARIES STB_IMAGE)
 
-# Assimp
-find_package(assimp REQUIRED)
-include_directories(${ASSIMP_INCLUDE_DIRS})
-list(APPEND LIBRARIES ${ASSIMP_LIBRARIES})
+  # Assimp
+  find_package(assimp REQUIRED)
+  include_directories(${ASSIMP_INCLUDE_DIRS})
+  list(APPEND LIBRARIES ${ASSIMP_LIBRARIES})
 
-if (CANNON_BUILD_GRAPHICS)
-  # OpenGL
-  find_package(OpenGL 4.3 REQUIRED)
-  include_directories(${OPENGL_INCLUDE_DIRS})
-  list(APPEND LIBRARIES ${OPENGL_LIBRARIES})
+  if (CANNON_BUILD_GRAPHICS)
+    # OpenGL
+    find_package(OpenGL 4.3 REQUIRED)
+    include_directories(${OPENGL_INCLUDE_DIRS})
+    list(APPEND LIBRARIES ${OPENGL_LIBRARIES})
 
-  # GLAD
-  add_library(GLAD "thirdparty/glad/src/glad.c")
-  target_link_libraries(GLAD ${CMAKE_DL_LIBS})
-  include_directories("thirdparty/glad/include")
-  list(APPEND LIBRARIES GLAD)
+    # GLAD
+    add_library(GLAD "thirdparty/glad/src/glad.c")
+    target_link_libraries(GLAD ${CMAKE_DL_LIBS})
+    include_directories("thirdparty/glad/include")
+    list(APPEND LIBRARIES GLAD)
 
-  # GLFW
-  find_package(GLFW3 REQUIRED)
-  include_directories(${GLFW3_INCLUDE_DIR})
-  list(APPEND LIBRARIES ${GLFW3_LIBRARY})
+    # GLFW
+    find_package(GLFW3 REQUIRED)
+    include_directories(${GLFW3_INCLUDE_DIR})
+    list(APPEND LIBRARIES ${GLFW3_LIBRARY})
 
-  # FreeType
-  find_package(Freetype REQUIRED)
-  include_directories(${FREETYPE_INCLUDE_DIRS})
-  list(APPEND LIBRARIES ${FREETYPE_LIBRARIES})
+    # FreeType
+    find_package(Freetype REQUIRED)
+    include_directories(${FREETYPE_INCLUDE_DIRS})
+    list(APPEND LIBRARIES ${FREETYPE_LIBRARIES})
 
-  # ImGui
-  add_definitions(-DIMGUI_IMPL_OPENGL_LOADER_GLAD)
-  include_directories(${PROJECT_SOURCE_DIR}/thirdparty/imgui)
-  include_directories(${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends)
-  include_directories(${PROJECT_SOURCE_DIR}/thirdparty/imgui/misc/cpp)
-  list(APPEND IMGUI_SOURCES
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui.cpp
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_draw.cpp
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_demo.cpp
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_widgets.cpp
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imconfig.h
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui.h
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/misc/cpp/imgui_stdlib.h
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/misc/cpp/imgui_stdlib.cpp
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_internal.h
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imstb_rectpack.h
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imstb_textedit.h
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imstb_truetype.h
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends/imgui_impl_glfw.cpp
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends/imgui_impl_glfw.h
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends/imgui_impl_opengl3.cpp
-    ${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends/imgui_impl_opengl3.h
-    )
-  add_library(imgui ${IMGUI_SOURCES})
-  target_link_libraries(imgui ${GLFW3_LIBRARY} ${OPENGL_LIBRARIES})
-  list(APPEND LIBRARIES imgui)
+    # ImGui
+    add_definitions(-DIMGUI_IMPL_OPENGL_LOADER_GLAD)
+    include_directories(${PROJECT_SOURCE_DIR}/thirdparty/imgui)
+    include_directories(${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends)
+    include_directories(${PROJECT_SOURCE_DIR}/thirdparty/imgui/misc/cpp)
+    list(APPEND IMGUI_SOURCES
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui.cpp
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_draw.cpp
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_demo.cpp
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_widgets.cpp
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imconfig.h
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui.h
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/misc/cpp/imgui_stdlib.h
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/misc/cpp/imgui_stdlib.cpp
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imgui_internal.h
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imstb_rectpack.h
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imstb_textedit.h
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/imstb_truetype.h
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends/imgui_impl_glfw.cpp
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends/imgui_impl_glfw.h
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends/imgui_impl_opengl3.cpp
+      ${PROJECT_SOURCE_DIR}/thirdparty/imgui/backends/imgui_impl_opengl3.h
+      )
+    add_library(imgui ${IMGUI_SOURCES})
+    target_link_libraries(imgui ${GLFW3_LIBRARY} ${OPENGL_LIBRARIES})
+    list(APPEND LIBRARIES imgui)
 
-  # ImPlot
-  #include_directories(${PROJECT_SOURCE_DIR}/thirdparty/implot)
-  #list(APPEND IMPLOT_SOURCES
-  #  ${PROJECT_SOURCE_DIR}/thirdparty/implot/implot.h
-  #  ${PROJECT_SOURCE_DIR}/thirdparty/implot/implot.cpp
-  #  ${PROJECT_SOURCE_DIR}/thirdparty/implot/implot_internal.h
-  #  ${PROJECT_SOURCE_DIR}/thirdparty/implot/implot_items.cpp
-  #  )
-  #add_library(implot ${IMPLOT_SOURCES})
-  #list(APPEND LIBRARIES implot)
-endif()
+    # ImPlot
+    #include_directories(${PROJECT_SOURCE_DIR}/thirdparty/implot)
+    #list(APPEND IMPLOT_SOURCES
+    #  ${PROJECT_SOURCE_DIR}/thirdparty/implot/implot.h
+    #  ${PROJECT_SOURCE_DIR}/thirdparty/implot/implot.cpp
+    #  ${PROJECT_SOURCE_DIR}/thirdparty/implot/implot_internal.h
+    #  ${PROJECT_SOURCE_DIR}/thirdparty/implot/implot_items.cpp
+    #  )
+    #add_library(implot ${IMPLOT_SOURCES})
+    #list(APPEND LIBRARIES implot)
+  endif()
 
-## Source code
-include_directories("${PROJECT_SOURCE_DIR}")
-add_subdirectory(cannon)
+  ## Source code
+  include_directories("${PROJECT_SOURCE_DIR}")
+  add_subdirectory(cannon)
 
-# Find unit tests
-file( GLOB_RECURSE TEST_SOURCES cannon/*.test.cpp )
-add_executable(unit_tests ${TEST_SOURCES})
-target_link_libraries(unit_tests Catch2::Catch2 cannon ${LIBRARIES})
-catch_discover_tests(unit_tests)
+  # Find unit tests
+  file( GLOB_RECURSE TEST_SOURCES cannon/*.test.cpp )
+  add_executable(unit_tests ${TEST_SOURCES})
+  target_link_libraries(unit_tests Catch2::Catch2 cannon ${LIBRARIES})
+  catch_discover_tests(unit_tests)
 
-# Find scripts
-file( GLOB_RECURSE SCRIPT_SOURCES scripts/*.cpp )
-foreach (script_source ${SCRIPT_SOURCES})
-  get_filename_component( scriptname ${script_source} NAME_WE)
-  add_executable( ${scriptname} ${script_source} )
-  target_link_libraries( ${scriptname} cannon ${LIBRARIES})
-  target_include_directories( ${scriptname} PUBLIC "${PROJECT_SOURCE_DIR}")
-  set_target_properties(${scriptname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/scripts")
-endforeach (script_source ${SCRIPT_SOURCES})
+  # Find scripts
+  file( GLOB_RECURSE SCRIPT_SOURCES scripts/*.cpp )
+  foreach (script_source ${SCRIPT_SOURCES})
+    get_filename_component( scriptname ${script_source} NAME_WE)
+    add_executable( ${scriptname} ${script_source} )
+    target_link_libraries( ${scriptname} cannon ${LIBRARIES})
+    target_include_directories( ${scriptname} PUBLIC "${PROJECT_SOURCE_DIR}")
+    set_target_properties(${scriptname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/scripts")
+  endforeach (script_source ${SCRIPT_SOURCES})
 
-if (CANNON_BUILD_RESEARCH)
-  # Find experiments
-  file( GLOB_RECURSE EXP_SOURCES cannon/research/experiments/*.cpp )
-  foreach (exp_source ${EXP_SOURCES})
-    get_filename_component( expname ${exp_source} NAME_WE)
-    add_executable( ${expname} ${exp_source} )
-    target_link_libraries( ${expname} cannon ${LIBRARIES})
-    target_include_directories( ${expname} PUBLIC "${PROJECT_SOURCE_DIR}")
-    set_target_properties(${expname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/experiments")
-  endforeach (exp_source ${EXP_SOURCES})
+  if (CANNON_BUILD_RESEARCH)
+    # Find experiments
+    file( GLOB_RECURSE EXP_SOURCES cannon/research/experiments/*.cpp )
+    foreach (exp_source ${EXP_SOURCES})
+      get_filename_component( expname ${exp_source} NAME_WE)
+      add_executable( ${expname} ${exp_source} )
+      target_link_libraries( ${expname} cannon ${LIBRARIES})
+      target_include_directories( ${expname} PUBLIC "${PROJECT_SOURCE_DIR}")
+      set_target_properties(${expname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/experiments")
+    endforeach (exp_source ${EXP_SOURCES})
+  endif()
 endif()
