Cleaned up includes up to plot package. Partially addresses #106

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -256,7 +256,7 @@ if (CANNON_BUILD_LIBRARY)
     foreach (exp_source ${EXP_SOURCES})
       get_filename_component( expname ${exp_source} NAME_WE)
       add_executable( ${expname} ${exp_source} )
-      target_link_libraries( ${expname} cannon ${LIBRARIES})
+      target_link_libraries( ${expname} cannon)
       target_include_directories( ${expname} PUBLIC "${PROJECT_SOURCE_DIR}")
       set_target_properties(${expname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/experiments")
     endforeach (exp_source ${EXP_SOURCES})
