Solved Project Euler problem 3. (#111)

--- a/cannon/math/CMakeLists.txt
+++ b/cannon/math/CMakeLists.txt
@@ -5,6 +5,7 @@ list(APPEND MATH_SOURCES
   func/rosenbrock.cpp
   random_double.cpp
   perlin.cpp
+  primes.cpp
   )
 
 add_library(math OBJECT ${MATH_SOURCES})
