Solved Project Euler problem 26. (#111)

--- a/cannon/math/CMakeLists.txt
+++ b/cannon/math/CMakeLists.txt
@@ -8,6 +8,7 @@ list(APPEND MATH_SOURCES
   primes.cpp
   bignum.cpp
   divisors.cpp
+  to_decimal.cpp
   )
 
 add_library(math OBJECT ${MATH_SOURCES})
