--- a/cannon/geom/CMakeLists.txt
+++ b/cannon/geom/CMakeLists.txt
@@ -2,6 +2,7 @@ list(APPEND GEOM_SOURCES
   kd_tree.cpp
   kd_tree_indexed.cpp
   extract_triangles.cpp
+  graph.cpp
   )
 
 add_library(geom OBJECT ${GEOM_SOURCES})
