Research updates and testing PID trajectory tracking

--- a/cannon/geom/CMakeLists.txt
+++ b/cannon/geom/CMakeLists.txt
@@ -3,6 +3,7 @@ list(APPEND GEOM_SOURCES
   kd_tree_indexed.cpp
   extract_triangles.cpp
   graph.cpp
+  trajectory.cpp
   )
 
 add_library(geom OBJECT ${GEOM_SOURCES})
